<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MoleFinder</string>
    <string name="text1">&quot;TESTING&quot;</string>
    <string name="button_take_pic">Take Picture</string>
    <string name="button_new_album">New Album</string>
    <string name="tab_albums">Album</string>
    <string name="tab_tags">Tags</string>
    <string name="button_gen_pic">Generate Pic</string>
    <string name="editPicDesc">Exploded view of user picture</string>
    <string name="dateLabel">Date</string>
    <string name="albumLabel">Album</string>
    <string name="tagsLabel">Tags</string>
    <string name="changeAlbumButton">Change...</string>
    <string name="button_search">Search</string>
</resources>
