<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/editPicDesc"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLabel"
        android:layout_below="@id/pictureView" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/dateLabel" />

    <TextView
        android:id="@+id/albumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumLabel"
        android:layout_below="@id/dateView" />

    <TextView
        android:id="@+id/albumView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/albumLabel" />
    
    <Button
        android:id="@+id/changeAlbumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumView"
        android:text="@string/changeAlbumButton" />

    <TextView
        android:id="@+id/tagsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagsLabel"
        android:layout_below="@+id/changeAlbumButton" />

</RelativeLayout>